objects/Individual_KPI__c/Individual_KPI__c.object-meta.xml
<CustomObject>
    <label>Individual KPI</label>
    <nameField>
        <displayFormat>IK-{00000}</displayFormat>
        <label>Individual KPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>