objects/Individual_KPI__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Individual KPIs</relationshipLabel>
    <relationshipName>Individual_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>