objects/Individual_KPI__c/fields/ExperienceLevel__c.field-meta.xml
<CustomField>
    <fullName>ExperienceLevel__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level A</fullName>
            </value>
            <value>
                <fullName>Level B</fullName>
            </value>
            <value>
                <fullName>Level C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>