objects/Individual_KPI__c/fields/Individual_KPI_Completed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Individual_KPI_Completed_Rate__c</fullName>
    <formula>(IndividualMonthKPIProfitAchieved__c / Individual_Month_KPI_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual KPI Completed Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>