objects/Individual_KPI__c/fields/Individual_KPI_Remain__c.field-meta.xml
<CustomField>
    <fullName>Individual_KPI_Remain__c</fullName>
    <formula>Individual_Month_KPI_Amount__c -  IndividualMonthKPIProfitAchieved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual KPI Remain</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>