objects/Individual_KPI__c/fields/Individual_Month_KPI_Amount__c.field-meta.xml
<CustomField>
    <fullName>Individual_Month_KPI_Amount__c</fullName>
    <label>Individual Month KPI Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>