objects/Individual_KPI__c/fields/IndividualMonthKPIProfitAchieved__c.field-meta.xml
<CustomField>
    <fullName>IndividualMonthKPIProfitAchieved__c</fullName>
    <label>Individual Month KPI Profit Achieved</label>
    <summarizedField>Shipment_Team_Member_Individual_KPI__c.Profit__c</summarizedField>
    <summaryForeignKey>Shipment_Team_Member_Individual_KPI__c.Individual_KPI__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>