objects/Individual_KPI__c/fields/KPI_Management__c.field-meta.xml
<CustomField>
    <fullName>KPI_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Management</label>
    <referenceTo>KPI_Management__c</referenceTo>
    <relationshipLabel>Individual KPIs (KPI Management)</relationshipLabel>
    <relationshipName>Individual_KPIs1</relationshipName>
    <type>Lookup</type>
</CustomField>