objects/Individual_KPI__c/fields/KPI_ManagementID__c.field-meta.xml
<CustomField>
    <fullName>KPI_ManagementID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Management ID</label>
    <referenceTo>KPI_Management__c</referenceTo>
    <relationshipLabel>Individual KPIs</relationshipLabel>
    <relationshipName>Individual_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>