objects/Individual_KPI__c/fields/Month_KPI_ID__c.field-meta.xml
<CustomField>
    <fullName>Month_KPI_ID__c</fullName>
    <label>Month KPI ID</label>
    <referenceTo>Month_KPI__c</referenceTo>
    <relationshipLabel>Individual KPIs</relationshipLabel>
    <relationshipName>Individual_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>