objects/Individual_KPI__c/fields/MonthKPI__c.field-meta.xml
<CustomField>
    <fullName>MonthKPI__c</fullName>
    <label>Month KPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>