objects/Individual_KPI__c/fields/monthkpifor__c.field-meta.xml
<CustomField>
    <fullName>monthkpifor__c</fullName>
    <formula>TEXT( MONTH( Month_KPI_ID__r.Month_KPI_End_Date__c ) )&amp;&quot;/&quot;&amp; TEXT( YEAR( Month_KPI_ID__r.Month_KPI_End_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>month kpi formula</label>
    <type>Text</type>
</CustomField>