objects/Individual_KPI__c/fields/NotUse__c.field-meta.xml
<CustomField>
    <fullName>NotUse__c</fullName>
    <label>Not Use</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>