objects/Individual_KPI__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Individual_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>