objects/Individual_KPI__c/fields/SalesmansManager__c.field-meta.xml
<CustomField>
    <fullName>SalesmansManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Individual_KPIs1</relationshipName>
    <type>Lookup</type>
</CustomField>