objects/Individual_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KPI_ManagementID__c</columns>
    <columns>Month_KPI_ID__c</columns>
    <columns>NAME</columns>
    <columns>Salesman__c</columns>
    <columns>Branch__c</columns>
    <columns>ExperienceLevel__c</columns>
    <columns>Individual_Month_KPI_Amount__c</columns>
    <columns>IndividualMonthKPIProfitAchieved__c</columns>
    <columns>Individual_KPI_Completed_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>